k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: accommodation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          #image: ${DOCKERHUB_USER}/accommodation-backend:${BRANCH_NAME}-latest
          image: bmilenkov/accommodation-backend:develop-latest
          ports:
            - containerPort: 9090
