k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: accommodation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          #image: ${DOCKERHUB_USER}/accommodation-frontend:${BRANCH_NAME}-local
          image: bmilenkov/accommodation-frontend:dev-local
          ports:
            - containerPort: 3000
